chore(design system): Update base font size to 14px #28724 (#29205)
### Proposed Changes
* Update $font-size-default to 14px
* Fix accesibility removing font-size definitions on html tags
* Update _fonts.scss to match figma design
* Replace font size values expressed in rems or px with vars as possible

**Screenshot**
![Captura de pantalla 2024-07-11 a la(s) 13 37
11](https://github.com/dotCMS/core/assets/77643678/09ab1388-721f-4ce4-b90c-5456f0307cf4)

--- a/core-web/libs/dot-rules/src/lib/styles/rule-engine.scss
+++ b/core-web/libs/dot-rules/src/lib/styles/rule-engine.scss
@@ -365,7 +365,7 @@ $finder-s-input: ".ui.input input";
     }
 
     .cw-header-info-arrow {
-        font-size: 16px;
+        font-size: $font-size-md;
         font-weight: bold;
         padding: 0.5em;
     }
