--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_table.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_table.scss
@@ -13,7 +13,7 @@
         z-index: 1;
         background-color: $white;
         color: $black;
-        font-size: $font-size-xsm;
+        font-size: $font-size-xs;
         transition: opacity 0.3s ease-in-out;
         border-radius: $border-radius-sm;
         padding: $spacing-1;
@@ -58,7 +58,7 @@ $dot-table-cell-height: 1.25rem;
             border: 1px solid $color-palette-gray-300;
             border-width: 0 0 1px 0;
             color: $black;
-            font-size: $font-size-xsm;
+            font-size: $font-size-sm;
             font-weight: $font-weight-bold;
             padding: $spacing-1;
             text-align: left;
@@ -128,7 +128,7 @@ $dot-table-cell-height: 1.25rem;
         .p-datatable-tbody > tr {
             background: $white;
             color: $black;
-            height: auto;
+            height: $field-height-md;
             transition: none;
             outline: 0 none;
             cursor: pointer;
@@ -142,7 +142,7 @@ $dot-table-cell-height: 1.25rem;
                 text-align: left;
                 border-bottom: 1px solid $color-palette-gray-300;
                 padding: 0 $spacing-1;
-                font-size: $font-size-smd;
+                font-size: $font-size-md;
                 white-space: nowrap;
                 overflow: hidden;
                 text-overflow: ellipsis;
@@ -255,7 +255,7 @@ $dot-table-cell-height: 1.25rem;
         }
 
         .p-datatable-loading-icon {
-            font-size: $font-size-xxxl;
+            font-size: $icon-xl;
             color: $color-palette-secondary;
         }
 
