--- a/core-web/libs/dotcms-scss/jsp/scss/backend/dot-admin/components/_file-selector-tree.scss
+++ b/core-web/libs/dotcms-scss/jsp/scss/backend/dot-admin/components/_file-selector-tree.scss
@@ -169,7 +169,7 @@
     }
 
     .label {
-        font-size: 16px;
+        font-size: $font-size-md;
         padding: 1.5rem 1rem;
         text-overflow: ellipsis;
         white-space: nowrap;
