--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_datatable.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_datatable.scss
@@ -103,7 +103,7 @@
 .p-datatable .p-datatable-tbody > tr {
     background: $white;
     color: $black;
-    height: 4rem;
+    height: $field-height-md;
     transition: none;
     outline: 0 none;
     cursor: pointer;
@@ -114,7 +114,7 @@
     text-align: left;
     border: 1px solid $color-palette-gray-300;
     border-width: 0 0 1px 0;
-    padding: $spacing-1 $spacing-2;
+    padding: 0.1875rem $spacing-2;
 
     &:first-child {
         padding-left: $spacing-5;
@@ -203,7 +203,8 @@
 }
 
 .p-datatable .p-datatable-loading-icon {
-    font-size: $font-size-xxxl;
+    width: $icon-xl;
+    height: $icon-xl;
     color: $color-palette-secondary;
 }
 
