--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_tree.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_tree.scss
@@ -111,7 +111,7 @@
 }
 
 .p-tree .p-tree-loading-icon {
-    font-size: $font-size-xxxl;
+    font-size: $icon-xl;
 }
 
 .p-tree .p-treenode-droppoint.p-treenode-droppoint-active {
