--- a/core-web/libs/dotcms-scss/jsp/scss/dotcms.scss
+++ b/core-web/libs/dotcms-scss/jsp/scss/dotcms.scss
@@ -53,13 +53,35 @@
 
 html {
     font-family: $font-default;
-    font-size: $font-size-default;
     color: $font-color-base;
 }
 
 body {
     margin: 0;
     padding: 0;
+}
+span,
+label,
+div,
+dl,
+dt,
+dd,
+ul,
+ol,
+li,
+pre,
+code,
+form,
+fieldset,
+legend,
+input,
+button,
+textarea,
+p,
+blockquote,
+th,
+td {
+    font-size: $font-size-md;
 }
 
 .material-icons {
