--- a/dotCMS/src/main/webapp/html/css/dijit-dotcms/dotcms.css
+++ b/dotCMS/src/main/webapp/html/css/dijit-dotcms/dotcms.css
@@ -3159,7 +3159,7 @@
 .dijitTextBox,
 .dijitToggleButton {
   border-radius: 0.375rem;
-  height: 2.5rem;
+  height: 2.125rem;
 }
 
 .dijitButton,
@@ -3359,7 +3359,7 @@
   color: #14151a;
   font-family: Assistant, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   padding: 0.5rem;
-  font-size: 1rem;
+  font-size: 0.875rem;
   min-height: 9.375rem;
   resize: vertical;
 }
@@ -3553,7 +3553,7 @@
 }
 .dijitButtonNode {
   border: none;
-  font-size: 1rem;
+  font-size: 0.875rem;
 }
 .dijitButtonHover {
   background-color: var(--color-palette-primary-100);
@@ -5219,7 +5219,8 @@
 .dojoxGrid .dojoxGridRow .dojoxGridRowTable .dojoxGridCell,
 .dojoxGrid .dojoxGridHeader .dojoxGridRowTable .dojoxGridCell {
   font-family: Assistant, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  padding: 10px 0.5rem;
+  padding: 0.1875rem 0.5rem;
+  height: 2.5rem;
 }
 .dojoxGrid .dojoxGridPaginator {
   background-color: #d1d4db;
@@ -6135,7 +6136,7 @@ select[multiple]:hover {
 
 .account-flyout h3 {
   margin: 20px 0 0 0;
-  font-size: 12px;
+  font-size: 0.625rem;
   font-weight: bold;
   padding: 0 15px;
 }
@@ -6176,7 +6177,7 @@ select[multiple]:hover {
 }
 
 .copyright {
-  font-size: 10px;
+  font-size: 0.625rem;
   color: #555;
   text-align: center;
 }
@@ -6215,7 +6216,7 @@ select[multiple]:hover {
   opacity: 0.7;
   color: #ddd;
   line-height: 14px;
-  font-size: 11px;
+  font-size: 0.625rem;
   box-shadow: 0px 0px 5px var(--color-palette-black-op-50);
   border-top-left-radius: 8px;
   border-top-right-radius: 8px;
@@ -6262,6 +6263,7 @@ select[multiple]:hover {
 }
 #listing-table tr, .listingTable tr, .dojoxUploaderFileListTable tr {
   transition: background-color 0.1s;
+  height: 2.4375rem;
 }
 #listing-table tr .selected, .listingTable tr .selected, .dojoxUploaderFileListTable tr .selected {
   background-color: #e0e9f6;
@@ -6270,16 +6272,17 @@ select[multiple]:hover {
 #listing-table td,
 .listingTable td,
 .dojoxUploaderFileListTable td {
-  padding: 10px 0.5rem;
   border-bottom: 1px solid #f3f3f4;
   vertical-align: middle;
+  height: 2.5rem !important;
+  padding: 0.5rem;
 }
 #listing-table th .listingThumbDiv, .listingTable th .listingThumbDiv, .dojoxUploaderFileListTable th .listingThumbDiv,
 #listing-table td .listingThumbDiv,
 .listingTable td .listingThumbDiv,
 .dojoxUploaderFileListTable td .listingThumbDiv {
-  height: 60px;
-  width: 80px;
+  height: 2.9375rem;
+  width: 4.5rem;
   position: relative;
   border-radius: 0.25rem;
   overflow: hidden;
@@ -6450,7 +6453,7 @@ tr.active {
 .lockedAgo {
   display: block;
   color: #999;
-  font-size: 11px;
+  font-size: 0.625rem;
   font-style: italic;
   line-height: 14px;
 }
@@ -6480,7 +6483,7 @@ tr.active {
 .contentHint {
   display: block;
   color: #999;
-  font-size: 11px;
+  font-size: 0.625rem;
   font-weight: normal;
   line-height: 14px;
   white-space: normal;
@@ -6642,7 +6645,7 @@ tr.active {
 
 .suggestHeading {
   padding: 7px 10px;
-  font-size: 12px;
+  font-size: 0.625rem;
   font-weight: bold;
   color: #555;
   background: url("/html/images/skin/skin-sprite.png") repeat-x scroll 0 -325px transparent;
@@ -7581,7 +7584,7 @@ table.dojoxLegendNode td {
 }
 
 .dojoxColorPickerOptional input {
-  font-size: 11px;
+  font-size: 0.625rem;
   border: 1px solid #a7a7a7;
   width: 25px;
   padding: 1px 3px 1px 3px;
@@ -7590,7 +7593,7 @@ table.dojoxLegendNode td {
 
 .dojoxColorPickerHex input {
   width: 55px;
-  font-size: 11px;
+  font-size: 0.625rem;
 }
 
 /* Image Picker */
@@ -7754,7 +7757,7 @@ div#_dotHelpMenu {
   -moz-osx-font-smoothing: grayscale;
   content: "\f054";
   color: #afb3c0;
-  font-size: 9px;
+  font-size: 0.625rem;
   position: absolute;
   right: 5px;
   top: 5px;
@@ -8806,7 +8809,7 @@ Styles for commons fields along the backend
   border-radius: 0.125rem;
   border: solid 1.5px #d1d4db;
   display: inline-block;
-  font-size: 12px;
+  font-size: 0.625rem;
   margin: 2px 5px 2px 0px;
   padding: 0.25rem 0.5rem 0.25rem 0.25rem;
   position: relative;
@@ -8940,7 +8943,7 @@ Styles for commons fields along the backend
   background: var(--color-palette-primary-200);
   border-radius: 0.25rem;
   color: var(--color-palette-primary-500);
-  font-size: 0.813rem;
+  font-size: 0.75rem;
   line-height: 0.374rem;
   text-align: center;
   text-decoration: none;
@@ -8950,7 +8953,7 @@ Styles for commons fields along the backend
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  padding-left: 1.313rem;
+  padding-left: 1.25rem;
   position: relative;
 }
 .tagLink.persona:before {
@@ -8962,7 +8965,7 @@ Styles for commons fields along the backend
   left: 0.5rem;
   color: var(--color-palette-primary-500);
   content: "✕";
-  font-size: 0.813rem;
+  font-size: 0.75rem;
   text-align: center;
   line-height: 0.374rem;
 }
@@ -9062,7 +9065,7 @@ Styles for commons fields along the backend
 }
 
 .hint-text {
-  font-size: 11px;
+  font-size: 0.625rem;
   color: #999;
   display: block;
   line-height: normal;
@@ -9456,7 +9459,7 @@ dd .buttonCaption {
 }
 
 .dayNumberSection {
-  font-size: 11px;
+  font-size: 0.625rem;
 }
 
 .dayNumber {
@@ -9719,7 +9722,7 @@ a.category_higlighted, a.tag_higlighted {
   text-overflow: clip;
   white-space: nowrap;
   font-family: Monaco, Menlo, sans-serif;
-  font-size: 12px;
+  font-size: 0.625rem;
 }
 
 .aceTextTemplate,
@@ -9736,7 +9739,7 @@ a.category_higlighted, a.tag_higlighted {
   text-overflow: clip;
   white-space: nowrap;
   font-family: Monaco, Menlo, sans-serif;
-  font-size: 12px;
+  font-size: 0.625rem;
 }
 
 .content-edit__main {
@@ -10410,7 +10413,7 @@ a.category_higlighted, a.tag_higlighted {
   color: #515667;
   cursor: pointer;
   display: block;
-  font-size: 1rem;
+  font-size: 0.875rem;
   height: 2.5rem;
   line-height: 2.5rem;
   padding: 0px 1.5rem;
@@ -10425,8 +10428,8 @@ a.category_higlighted, a.tag_higlighted {
   display: none;
 }
 .context-menu__item .arrowRightIcon {
-  font-size: 0.813rem;
-  margin-top: -0.4065rem;
+  font-size: 0.75rem;
+  margin-top: -0.375rem;
   position: absolute;
   right: 0.5rem;
   top: 50%;
@@ -10585,7 +10588,7 @@ a.category_higlighted, a.tag_higlighted {
   position: absolute;
 }
 .file-selector-tree__card .label {
-  font-size: 16px;
+  font-size: 0.875rem;
   padding: 1.5rem 1rem;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -11160,7 +11163,7 @@ Resize Handle
   border-radius: 0.375rem;
   color: #6c7389;
   font-family: Assistant, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  font-size: 1rem;
+  font-size: 0.875rem;
   line-height: 2.5rem;
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -11206,13 +11209,36 @@ Resize Handle
 
 html {
   font-family: Assistant, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  font-size: 1rem;
   color: #14151a;
 }
 
 body {
   margin: 0;
   padding: 0;
+}
+
+span,
+label,
+div,
+dl,
+dt,
+dd,
+ul,
+ol,
+li,
+pre,
+code,
+form,
+fieldset,
+legend,
+input,
+button,
+textarea,
+p,
+blockquote,
+th,
+td {
+  font-size: 0.875rem;
 }
 
 .material-icons {
