avoid initial state to load the empty state, that is causing a FF animation issue

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-category-list/dot-category-field-category-list.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-category-list/dot-category-field-category-list.component.html
@@ -59,6 +59,6 @@
             </div>
         }
     </div>
-} @else {
+} @else if (!$isInitialState) {
     <dot-empty-container [configuration]="$emptyState()" [hideContactUsLink]="true" />
 }
