--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.html
@@ -38,6 +38,7 @@
                         (rowClicked)="store.getCategories($event)"
                         [categories]="store.categoryList()"
                         [isLoading]="store.isListLoading()"
+                        [isInitialState]="store.isInitSate()"
                         [selected]="store.selectedCategoriesValues()"
                         [breadcrumbs]="store.breadcrumbMenu()" />
                 } @else {
