replace lmd for md

--- a/core-web/libs/edit-content/src/lib/components/dot-edit-content-aside/dot-edit-content-aside.component.scss
+++ b/core-web/libs/edit-content/src/lib/components/dot-edit-content-aside/dot-edit-content-aside.component.scss
@@ -55,7 +55,7 @@
 
         h2 {
             color: $black;
-            font-size: $font-size-lmd;
+            font-size: $font-size-md;
             font-weight: $font-weight-bold;
             line-height: $line-height;
             margin: 0;
