replace lg for lmd

--- a/core-web/apps/dotcms-ui/src/app/portlets/dot-apps/dot-apps-configuration-detail/dot-apps-configuration-detail-form/dot-apps-configuration-detail-form.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/portlets/dot-apps/dot-apps-configuration-detail/dot-apps-configuration-detail-form/dot-apps-configuration-detail-form.component.scss
@@ -35,7 +35,7 @@
 
     input,
     textarea {
-        font-size: $font-size-lg;
+        font-size: $font-size-lmd;
         width: 100%;
     }
 
@@ -52,7 +52,7 @@
         }
 
         p-checkbox label {
-            font-size: $font-size-lg;
+            font-size: $font-size-lmd;
         }
 
         p-checkbox.required label:before,
