--- a/core-web/apps/dotcms-ui/src/app/view/components/_common/dot-md-icon-selector/dot-md-icon-selector.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/view/components/_common/dot-md-icon-selector/dot-md-icon-selector.component.scss
@@ -69,7 +69,7 @@ dot-material-icon-picker {
             }
 
             mwc-icon {
-                font-size: $font-size-lg;
+                font-size: $font-size-lmd;
             }
         }
     }
