--- a/core-web/apps/dotcms-ui/src/app/view/components/dot-edit-layout-designer/components/dot-edit-layout-sidebar/dot-edit-layout-sidebar.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/view/components/dot-edit-layout-designer/components/dot-edit-layout-sidebar/dot-edit-layout-sidebar.component.scss
@@ -29,7 +29,7 @@ h6 {
     align-items: center;
     background-color: $color-palette-gray-200;
     display: flex;
-    font-size: $font-size-lg;
+    font-size: $font-size-lmd;
     font-weight: normal;
     height: 48px;
     margin: 0;
