--- a/core-web/apps/dotcms-ui/src/app/view/components/dot-secondary-toolbar/dot-secondary-toolbar.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/view/components/dot-secondary-toolbar/dot-secondary-toolbar.component.scss
@@ -85,7 +85,7 @@
         .main-toolbar-right {
             h2 {
                 margin: 0;
-                font-size: $font-size-lg;
+                font-size: $font-size-lmd;
             }
         }
     }
