--- a/core-web/apps/dotcms-ui/src/app/view/components/dot-toolbar/components/dot-toolbar-announcements/dot-toolbar-announcements.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/view/components/dot-toolbar/components/dot-toolbar-announcements/dot-toolbar-announcements.component.scss
@@ -56,7 +56,7 @@
     margin: 0;
     padding-bottom: $spacing-1;
     border-bottom: 1px solid $color-palette-gray-300;
-    font-size: $font-size-lg;
+    font-size: $font-size-lmd;
 }
 
 .announcements__content {
@@ -76,7 +76,7 @@
     background-color: var(--color-palette-secondary-200);
     color: var(--color-palette-secondary-500);
     border-radius: 50%;
-    font-size: $font-size-lg;
+    font-size: $font-size-lmd;
 }
 
 .announcements__label {
