--- a/core-web/apps/dotcms-ui/src/app/view/components/dot-toolbar/components/dot-toolbar-user/dot-toolbar-user.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/view/components/dot-toolbar/components/dot-toolbar-user/dot-toolbar-user.component.scss
@@ -20,7 +20,7 @@ p-avatar {
     .toolbar-user__user-name {
         margin: 0;
         white-space: nowrap;
-        font-size: $font-size-lg;
+        font-size: $font-size-lmd;
         color: $black;
     }
 }
