--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_accordion.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_accordion.scss
@@ -7,7 +7,7 @@
     font-weight: $font-weight-semi-bold;
     border-radius: $border-radius-md;
     transition: box-shadow 0.2s;
-    font-size: $font-size-lg;
+    font-size: $font-size-lmd;
 }
 .p-accordion .p-accordion-header .p-accordion-header-link .p-accordion-toggle-icon {
     margin-right: $spacing-1;
