--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/buttons/common.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/buttons/common.scss
@@ -4,7 +4,7 @@
 #large {
     height: $field-height-lg;
     border-radius: $border-radius-lg;
-    font-size: $font-size-lg;
+    font-size: $font-size-lmd;
 
     .p-button-label {
         font-size: inherit;
