--- a/core-web/libs/dotcms-scss/jsp/scss/backend/dot-admin/portlets/_calendar-events.scss
+++ b/core-web/libs/dotcms-scss/jsp/scss/backend/dot-admin/portlets/_calendar-events.scss
@@ -14,7 +14,7 @@
 
     .portlet-toolbar__info {
         flex: 1 0 auto;
-        font-size: $font-size-lg;
+        font-size: $font-size-lmd;
         justify-content: center;
     }
 }
