--- a/core-web/libs/edit-content/src/lib/feature/edit-content/edit-content.layout.component.scss
+++ b/core-web/libs/edit-content/src/lib/feature/edit-content/edit-content.layout.component.scss
@@ -17,7 +17,7 @@
     grid-area: topBar;
 
     .pi {
-        font-size: $font-size-lg;
+        font-size: $font-size-lmd;
         margin-right: $spacing-1;
     }
 }
