--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-category-list/dot-category-field-category-list.component.scss
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-category-list/dot-category-field-category-list.component.scss
@@ -16,7 +16,7 @@
 
 .category-list__header {
     padding: $spacing-1 $spacing-4;
-    font-size: $font-size-lg;
+    font-size: $font-size-lmd;
     font-weight: $font-weight-medium-bold;
     border-bottom: 1px solid $color-palette-gray-400;
 }
