--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.scss
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-category-field-sidebar/dot-category-field-sidebar.component.scss
@@ -20,7 +20,7 @@
 }
 
 .category-field__header-title {
-    font-size: $font-size-lg;
+    font-size: $font-size-lmd;
     font-weight: $font-weight-medium-bold;
     margin: 0;
 }
