--- a/core-web/libs/portlets/edit-ema/ui/src/lib/dot-content-compare/components/dot-content-compare-table/dot-content-compare-table.component.scss
+++ b/core-web/libs/portlets/edit-ema/ui/src/lib/dot-content-compare/components/dot-content-compare-table/dot-content-compare-table.component.scss
@@ -18,7 +18,7 @@
 
 .dot-content-compare-table__title {
     color: $black;
-    font-size: $font-size-lg;
+    font-size: $font-size-lmd;
 }
 
 :host ::ng-deep .p-datatable {
