--- a/core-web/libs/ui/src/lib/components/dot-empty-container/dot-empty-container.component.scss
+++ b/core-web/libs/ui/src/lib/components/dot-empty-container/dot-empty-container.component.scss
@@ -14,7 +14,7 @@
     line-height: 140%;
 }
 .message__title {
-    font-size: $font-size-lg;
+    font-size: $font-size-lmd;
     font-weight: $font-weight-semi-bold;
     color: $black;
 }
