--- a/core-web/libs/ui/src/lib/components/dot-sidebar-header/dot-sidebar-header.component.scss
+++ b/core-web/libs/ui/src/lib/components/dot-sidebar-header/dot-sidebar-header.component.scss
@@ -10,7 +10,7 @@
     margin-top: -$spacing-3;
 
     h2 {
-        font-size: $font-size-lg;
+        font-size: $font-size-lmd;
         margin: 0;
         margin-left: $spacing-1;
     }
