--- a/core-web/apps/dotcms-ui/src/app/portlets/dot-apps/dot-apps-configuration-detail/dot-apps-configuration-detail.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/portlets/dot-apps/dot-apps-configuration-detail/dot-apps-configuration-detail.component.scss
@@ -28,7 +28,7 @@
     color: $black;
     display: flex;
     justify-content: space-between;
-    font-size: $font-size-lg;
+    font-size: $font-size-lmd;
     font-weight: $font-weight-semi-bold;
     padding: $spacing-3;
 
