--- a/core-web/apps/dotcms-ui/src/app/portlets/dot-apps/dot-apps-configuration/dot-apps-configuration.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/portlets/dot-apps/dot-apps-configuration/dot-apps-configuration.component.scss
@@ -44,7 +44,7 @@
 }
 
 .dot-apps-configuration__add-configurations-description {
-    font-size: $font-size-lg;
+    font-size: $font-size-lmd;
     margin-bottom: $spacing-9;
     margin-top: $spacing-4;
 }
