--- a/core-web/apps/dotcms-ui/src/app/portlets/dot-starter/dot-starter.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/portlets/dot-starter/dot-starter.component.scss
@@ -107,7 +107,7 @@ $number-link-icon-size: 2.28rem;
 
         h4 {
             color: $black;
-            font-size: $font-size-lg;
+            font-size: $font-size-lmd;
             font-weight: $font-weight-semi-bold;
             margin: 0;
         }
@@ -129,7 +129,7 @@ $number-link-icon-size: 2.28rem;
     }
 
     .dot-starter-top-main__title {
-        font-size: $font-size-lg;
+        font-size: $font-size-lmd;
         font-weight: $font-weight-semi-bold;
         margin: 0;
         border-bottom: 1px solid $color-palette-gray-300;
@@ -166,7 +166,7 @@ $number-link-icon-size: 2.28rem;
 
         h4 {
             color: $black;
-            font-size: $font-size-lg;
+            font-size: $font-size-lmd;
             margin: 0;
         }
         p {
@@ -180,7 +180,7 @@ $number-link-icon-size: 2.28rem;
 
         h4 {
             color: $color-palette-primary;
-            font-size: $font-size-lg;
+            font-size: $font-size-lmd;
             font-weight: 500;
             margin: 0;
             padding-bottom: $spacing-1;
@@ -228,7 +228,7 @@ $number-link-icon-size: 2.28rem;
 
         h4 {
             color: $black;
-            font-size: $font-size-lg;
+            font-size: $font-size-lmd;
             margin: 0;
         }
         p {
