--- a/core-web/apps/dotcms-ui/src/app/view/components/dot-crumbtrail/dot-crumbtrail.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/view/components/dot-crumbtrail/dot-crumbtrail.component.scss
@@ -3,17 +3,17 @@
 :host ::ng-deep .p-breadcrumb {
     ul li {
         &:first-child {
-            font-size: $font-size-lg;
+            font-size: $font-size-lmd;
             a span.p-menuitem-text {
                 color: $black;
-                font-size: $font-size-lg;
+                font-size: $font-size-lmd;
                 font-weight: $font-weight-regular-bold;
             }
         }
 
         .p-menuitem-link[href] {
             .p-menuitem-text {
-                font-size: $font-size-lg;
+                font-size: $font-size-lmd;
             }
         }
 
