--- a/core-web/apps/dotcms-ui/src/app/view/components/dot-message-display/dot-message-display.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/view/components/dot-message-display/dot-message-display.component.scss
@@ -11,7 +11,7 @@
             h4,
             h5,
             h6 {
-                font-size: $font-size-lg;
+                font-size: $font-size-lmd;
                 font-weight: bold;
             }
 
