--- a/core-web/libs/portlets/dot-experiments/portlet/src/lib/dot-experiments-configuration/components/dot-experiments-configuration-traffic-split-add/dot-experiments-configuration-traffic-split-add.component.scss
+++ b/core-web/libs/portlets/dot-experiments/portlet/src/lib/dot-experiments-configuration/components/dot-experiments-configuration-traffic-split-add/dot-experiments-configuration-traffic-split-add.component.scss
@@ -11,7 +11,7 @@
     label {
         font-weight: $font-weight-bold;
         margin-bottom: $spacing-3;
-        font-size: $font-size-lg;
+        font-size: $font-size-lmd;
     }
 
     p-radioButton {
@@ -33,7 +33,7 @@
             min-height: 2.7rem;
 
             &.experiment-traffic-split__variants-header {
-                font-size: $font-size-lg;
+                font-size: $font-size-lmd;
                 color: $color-palette-gray-700;
                 text-transform: uppercase;
                 font-weight: $font-weight-bold;
