--- a/core-web/libs/portlets/edit-ema/ui/src/lib/dot-results-seo-tool/dot-results-seo-tool.component.scss
+++ b/core-web/libs/portlets/edit-ema/ui/src/lib/dot-results-seo-tool/dot-results-seo-tool.component.scss
@@ -52,7 +52,7 @@
 }
 
 .results-seo-tool__search-title {
-    font-size: $font-size-lg;
+    font-size: $font-size-lmd;
     text-decoration: none;
 }
 
@@ -74,7 +74,7 @@
     display: flex;
     gap: $spacing-3;
     align-items: center;
-    font-size: $font-size-lg;
+    font-size: $font-size-lmd;
     color: $black;
 }
 
