--- a/core-web/libs/portlets/edit-ema/ui/src/lib/dot-select-seo-tool/dot-select-seo-tool.component.scss
+++ b/core-web/libs/portlets/edit-ema/ui/src/lib/dot-select-seo-tool/dot-select-seo-tool.component.scss
@@ -15,7 +15,7 @@
 }
 
 .dot-select-seo-tool__icon {
-    font-size: $font-size-lg;
+    font-size: $font-size-lmd;
     color: $color-palette-primary-500;
 }
 
@@ -24,6 +24,6 @@
 }
 
 .dot-select-seo-tool__details {
-    font-size: $font-size-lg;
+    font-size: $font-size-lmd;
     color: $color-palette-gray-700;
 }
