replace xl for lg

--- a/core-web/apps/dotcms-ui/src/app/portlets/dot-starter/dot-starter.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/portlets/dot-starter/dot-starter.component.scss
@@ -29,7 +29,7 @@ $number-link-icon-size: 2.28rem;
 
     .dot-starter-title {
         color: $black;
-        font-size: $font-size-xl;
+        font-size: $font-size-lg;
         margin: $spacing-5 $spacing-3 $spacing-1;
     }
 
@@ -123,7 +123,7 @@ $number-link-icon-size: 2.28rem;
 
         i {
             color: $color-palette-gray-500;
-            font-size: $font-size-xl;
+            font-size: $font-size-lg;
             margin-right: $spacing-3;
         }
     }
