--- a/core-web/libs/block-editor/src/lib/nodes/contentlet-block/contentlet-block.component.scss
+++ b/core-web/libs/block-editor/src/lib/nodes/contentlet-block/contentlet-block.component.scss
@@ -58,7 +58,7 @@
                         padding: 0;
                         text-overflow: ellipsis;
                         white-space: nowrap;
-                        font-size: $font-size-xl;
+                        font-size: $font-size-lg;
                     }
                 }
             }
