--- a/core-web/libs/dot-rules/src/lib/styles/rule-engine.scss
+++ b/core-web/libs/dot-rules/src/lib/styles/rule-engine.scss
@@ -576,7 +576,7 @@ $finder-s-input: ".ui.input input";
 
         i {
             color: $white;
-            font-size: $font-size-xl;
+            font-size: $font-size-lg;
         }
     }
 }
