--- a/core-web/libs/dotcms-scss/jsp/scss/backend/dot-admin/forms/_fields.scss
+++ b/core-web/libs/dotcms-scss/jsp/scss/backend/dot-admin/forms/_fields.scss
@@ -120,7 +120,7 @@ Styles for commons fields along the backend
 
 .lineDividerTitle {
     color: $color-palette-gray-700;
-    font-size: $font-size-xl;
+    font-size: $font-size-lg;
     border-bottom: 1px solid $color-palette-gray-400;
     padding-bottom: $spacing-1 * 2;
     margin: $spacing-1 * 6 0 $spacing-1 * 3;
