--- a/core-web/libs/portlets/edit-ema/portlet/src/lib/dot-ema-shell/components/edit-ema-navigation-bar/edit-ema-navigation-bar.component.scss
+++ b/core-web/libs/portlets/edit-ema/portlet/src/lib/dot-ema-shell/components/edit-ema-navigation-bar/edit-ema-navigation-bar.component.scss
@@ -29,7 +29,7 @@
     position: relative;
 
     .pi {
-        font-size: $font-size-xl;
+        font-size: $font-size-lg;
         color: $color-palette-primary-800;
     }
 
