--- a/core-web/apps/dotcms-ui/src/app/view/components/_common/dot-md-icon-selector/dot-md-icon-selector.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/view/components/_common/dot-md-icon-selector/dot-md-icon-selector.component.scss
@@ -32,7 +32,7 @@ dot-material-icon-picker {
         }
 
         .dot-material-icon__preview {
-            font-size: $font-size-xl;
+            font-size: $font-size-lg;
         }
 
         .dot-material-icon__button {
@@ -43,7 +43,7 @@ dot-material-icon-picker {
             justify-content: center;
 
             mwc-icon {
-                font-size: $font-size-xl;
+                font-size: $font-size-lg;
                 width: $field-height-md;
             }
         }
