--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_confirmpopup.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_confirmpopup.scss
@@ -14,7 +14,7 @@
     box-shadow: $shadow-xs;
 
     .p-confirm-popup-icon {
-        font-size: $font-size-xl;
+        font-size: $font-size-lg;
         color: $color-palette-primary-500;
     }
 
