--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/messages/_message.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/messages/_message.scss
@@ -143,7 +143,7 @@
     font-weight: $font-weight-semi-bold;
 }
 .p-message .p-message-icon {
-    font-size: $font-size-xl;
+    font-size: $font-size-lg;
     margin-right: $spacing-1;
 }
 .p-message .p-message-summary {
