replace xxl for xl

--- a/core-web/apps/dotcms-ui/src/app/portlets/dot-apps/dot-apps-configuration-header/dot-apps-configuration-header.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/portlets/dot-apps/dot-apps-configuration-header/dot-apps-configuration-header.component.scss
@@ -31,7 +31,7 @@
     color: $black;
     cursor: pointer;
     display: inline-block;
-    font-size: $font-size-xxl;
+    font-size: $font-size-xl;
     font-weight: bold;
     margin: 0;
 }
