--- a/core-web/apps/dotcms-ui/src/app/portlets/dot-apps/dot-apps-configuration/dot-apps-configuration.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/portlets/dot-apps/dot-apps-configuration/dot-apps-configuration.component.scss
@@ -39,7 +39,7 @@
 }
 
 .dot-apps-configuration__add-configurations-title {
-    font-size: $font-size-xxl;
+    font-size: $font-size-xl;
     font-weight: bold;
 }
 
