--- a/core-web/apps/dotcms-ui/src/app/view/components/dot-edit-layout-designer/components/dot-layout-designer/dot-layout-designer.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/view/components/dot-edit-layout-designer/components/dot-layout-designer/dot-layout-designer.component.scss
@@ -31,7 +31,7 @@
     color: $color-palette-gray-700;
     display: flex;
     flex-shrink: 0;
-    font-size: $font-size-xxl;
+    font-size: $font-size-xl;
     justify-content: center;
 }
 
