--- a/core-web/apps/dotcms-ui/src/app/view/components/dot-secondary-toolbar/dot-secondary-toolbar.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/view/components/dot-secondary-toolbar/dot-secondary-toolbar.component.scss
@@ -65,7 +65,7 @@
 
             h2 {
                 color: inherit;
-                font-size: $font-size-xxl;
+                font-size: $font-size-xl;
                 font-weight: normal;
             }
 
