--- a/core-web/libs/dot-rules/src/lib/styles/rule-engine.scss
+++ b/core-web/libs/dot-rules/src/lib/styles/rule-engine.scss
@@ -538,7 +538,7 @@ $finder-s-input: ".ui.input input";
         }
 
         h2 {
-            font-size: $font-size-xxl;
+            font-size: $font-size-xl;
             margin: 0;
             color: $color-palette-gray-700;
         }
