--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_dialog.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/_dialog.scss
@@ -85,7 +85,7 @@
 
 //TODO: This need to go to the confirm-dialog stylesheet when we update the look and feel
 .p-dialog.p-confirm-dialog .p-confirm-dialog-icon {
-    font-size: $font-size-xxl;
+    font-size: $font-size-xl;
     padding-right: $spacing-1;
     color: $color-palette-primary;
 }
