--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/utils/_theme-variables.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/utils/_theme-variables.scss
@@ -195,7 +195,7 @@ $tabview-nav-height: 48px;
 $menu-link-color: $black;
 
 // DIALOG
-$dialog-title-font-size: $font-size-xxl;
+$dialog-title-font-size: $font-size-xl;
 $dialog-message-line-height: $line-height;
 $dialog-message-warning-color: $red;
 $dialog-close-button-normal-color: $color-palette-black-op-70;
