fix dot-apps font-size

--- a/core-web/apps/dotcms-ui/src/app/portlets/dot-apps/dot-apps-list/dot-apps-list.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/portlets/dot-apps/dot-apps-list/dot-apps-list.component.scss
@@ -15,6 +15,7 @@
     justify-content: space-between;
     padding: 0 $spacing-4 $spacing-4;
     width: 100%;
+    font-size: $font-size-md;
 
     input {
         width: 31.42rem;
