--- a/core-web/apps/dotcms-ui/src/app/view/components/dot-listing-data-table/action-header/action-header.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/view/components/dot-listing-data-table/action-header/action-header.component.scss
@@ -10,6 +10,7 @@
     flex-direction: row-reverse;
     align-items: center;
     padding: $spacing-3 $spacing-5;
+    font-size: $font-size-md;
 
     &.selected {
         .action-header__primary-button {
