fix .cw-rule font-size for rules portlet

--- a/core-web/libs/dot-rules/src/lib/styles/rule-engine.scss
+++ b/core-web/libs/dot-rules/src/lib/styles/rule-engine.scss
@@ -244,6 +244,7 @@ $finder-s-input: ".ui.input input";
         border: 1px solid $background-primary;
         border-radius: 0.5em;
         background-color: #fff;
+        font-size: $font-size-md;
 
         .cw-header-actions {
             margin-right: 0.5em;
