chore(primeng): fix some errors

--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/form/_autocomplete.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/form/_autocomplete.scss
@@ -91,7 +91,7 @@ p-autocomplete.p-inputwrapper-focus {
             &:hover,
             &:active,
             &.p-focus {
-                //border: none;
+                border: none;
             }
 
             .p-autocomplete-token {
