chore(dotcms-ui): fix color

--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/form/_calendar.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/form/_calendar.scss
@@ -47,6 +47,10 @@
             width: $icon-lg-box;
             font-size: $icon-lg;
         }
+
+        .p-icon-wrapper {
+            color: $color-palette-primary-500;
+        }
     }
 
     .p-button:enabled.p-datepicker-trigger .pi {
