--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/form/_calendar.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/form/_calendar.scss
@@ -242,7 +242,7 @@ p-calendar.p-calendar-clearable {
     }
 
     .p-calendar-clear-icon {
-        margin-top: -7px;
+        margin-top: -0.438rem;
         color: $color-palette-gray-500;
         width: $icon-lg-box;
         font-size: $icon-lg;
