chore(dotcms-ui): fix color (#29615)
### Parent Issue

https://github.com/dotCMS/core/issues/29472

### Proposed Changes
* Fix icon color

### Checklist
- [x] Tests
- [x] Translations
- [x] Security Implications Contemplated (add notes if applicable)

### Screenshots
Original             |  Updated
:-------------------------:|:-------------------------:
<img width="641" alt="Screenshot 2024-08-16 at 11 38 48 AM"
src="https://github.com/user-attachments/assets/69233b42-d4b0-4523-94bb-babe503b8fa2">
| <img width="632" alt="Screenshot 2024-08-16 at 11 37 42 AM"
src="https://github.com/user-attachments/assets/80eae706-2520-4e24-a14c-d9536e9c410b">

--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/form/_calendar.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/form/_calendar.scss
@@ -47,6 +47,10 @@
             width: $icon-lg-box;
             font-size: $icon-lg;
         }
+
+        .p-icon-wrapper {
+            color: $color-palette-primary-500;
+        }
     }
 
     .p-button:enabled.p-datepicker-trigger .pi {
@@ -238,7 +242,7 @@ p-calendar.p-calendar-clearable {
     }
 
     .p-calendar-clear-icon {
-        margin-top: -12px;
+        margin-top: -0.438rem;
         color: $color-palette-gray-500;
         width: $icon-lg-box;
         font-size: $icon-lg;
