chore(edit-content): use the new angular syntax

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-table-skeleton/dot-table-skeleton.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-category-field/components/dot-table-skeleton/dot-table-skeleton.component.html
@@ -16,9 +16,9 @@
             @for (col of columns; track $index) {
                 <td>
                     @if (col === '') {
-                        <p-skeleton size="1rem" styleClass="mr-1"></p-skeleton>
+                        <p-skeleton size="1rem" styleClass="mr-1" />
                     } @else {
-                        <p-skeleton></p-skeleton>
+                        <p-skeleton />
                     }
                 </td>
             }
