--- a/core-web/apps/dotcms-ui/src/app/portlets/dot-templates/dot-template-list/dot-template-list.component.html
+++ b/core-web/apps/dotcms-ui/src/app/portlets/dot-templates/dot-template-list/dot-template-list.component.html
@@ -28,7 +28,7 @@
                 type="button"
                 pButton
                 icon="pi pi-ellipsis-v"
-                attr.data-testid="bulkActions"></button>
+                data-testid="bulkActions"></button>
         </div>
         <p-menu [popup]="true" [model]="templateBulkActions" #actionsMenu appendTo="body"></p-menu>
     </div>
