chore(primeng): p-dataview breaking change

--- a/core-web/apps/dotcms-ui/src/app/view/components/_common/searchable-dropdown/component/searchable-dropdown.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/view/components/_common/searchable-dropdown/component/searchable-dropdown.component.scss
@@ -51,8 +51,8 @@
 
 ::ng-deep {
     .p-overlaypanel.paginator {
-        .p-dataview-content {
-            margin-bottom: $spacing-9;
+        .p-paginator {
+            justify-content: center;
         }
 
         .p-paginator-bottom {
