--- a/core-web/apps/dotcms-ui/src/app/view/components/_common/searchable-dropdown/component/searchable-dropdown.component.html
+++ b/core-web/apps/dotcms-ui/src/app/view/components/_common/searchable-dropdown/component/searchable-dropdown.component.html
@@ -1,12 +1,16 @@
-<ng-template #defaultItemListTemplate let-item="item" pTemplate="listItem">
-    <span
-        (click)="handleClick(item)"
-        [class.selected]="item[labelPropertyName] === valueString"
-        class="searchable-dropdown__data-list-item"
-        data-testid="searchable-dropdown-data-list-item">
-        <i *ngIf="item[labelPropertyName] === valueString" class="pi pi-check"></i>
-        {{ item.label }}
-    </span>
+<ng-template #defaultListTemplate let-data="data" pTemplate="list">
+    @for (item of data; track $index) {
+        <span
+            (click)="handleClick(item)"
+            [class.selected]="item[getValueLabelPropertyName()] === valueString"
+            class="searchable-dropdown__data-list-item"
+            data-testid="searchable-dropdown-data-list-item">
+            @if (item[getValueLabelPropertyName()] === valueString) {
+                <i class="pi pi-check"></i>
+            }
+            {{ item.label }}
+        </span>
+    }
 </ng-template>
 
 <ng-template #defaultFilterTemplate>
@@ -23,18 +27,19 @@
 </ng-template>
 
 <ng-template #defaultSelectTemplate let-item="item">
-    <button
-        #button
-        (click)="searchPanel.toggle($event)"
-        *ngIf="label"
-        [disabled]="disabled"
-        [label]="label"
-        [ngStyle]="{ width: width }"
-        class="p-button-outlined"
-        icon="pi pi-chevron-down"
-        iconPos="right"
-        pButton
-        type="button"></button>
+    @if (label) {
+        <button
+            #button
+            (click)="searchPanel.toggle($event)"
+            [disabled]="disabled"
+            [label]="label"
+            [ngStyle]="{ width: width }"
+            class="p-button-outlined"
+            icon="pi pi-chevron-down"
+            iconPos="right"
+            pButton
+            type="button"></button>
+    }
 </ng-template>
 
 <p-overlayPanel
@@ -50,12 +55,14 @@
             <ng-container
                 [ngTemplateOutlet]="externalFilterTemplate || defaultFilterTemplate"></ng-container>
         </div>
-        <div *ngIf="action" class="searchable-dropdown__search-action">
-            <p-button
-                (click)="action()"
-                icon="pi pi-plus"
-                styleClass="p-button-text p-button-rounded"></p-button>
-        </div>
+        @if (action) {
+            <div class="searchable-dropdown__search-action">
+                <p-button
+                    (click)="action($event)"
+                    icon="pi pi-plus"
+                    styleClass="p-button-text p-button-rounded"></p-button>
+            </div>
+        }
     </header>
 
     <p-dataView
@@ -70,15 +77,13 @@
         [totalRecords]="totalRecords"
         [value]="options"
         class="searchable-dropdown__data-list">
-        <ng-template let-item pTemplate="listItem">
+        <ng-template let-data pTemplate="list">
             <ng-container
                 [ngTemplateOutletContext]="{
-                    item: item,
+                    data: data,
                     selectedOptionValue: selectedOptionValue
                 }"
-                [ngTemplateOutlet]="
-                    externalItemListTemplate || defaultItemListTemplate
-                "></ng-container>
+                [ngTemplateOutlet]="externalItemListTemplate || defaultListTemplate"></ng-container>
         </ng-template>
     </p-dataView>
 </p-overlayPanel>
