chore(primeng) fix breaking change with data-table

--- a/core-web/apps/dotcms-ui/src/app/view/components/_common/dot-site-selector/dot-site-selector.component.html
+++ b/core-web/apps/dotcms-ui/src/app/view/components/_common/dot-site-selector/dot-site-selector.component.html
@@ -14,7 +14,7 @@
     [width]="width"
     #searchableDropdown
     labelPropertyName="hostname"
-    cssClassDataList="site_selector__data-list"></dot-searchable-dropdown>
+    cssClassDataList="site_selector__data-list" />
 
 <ng-template #hostName>
     <span class="site-selector__title">{{ currentSite?.hostname }}</span>
