fix font-sizes inconsistencies

--- a/core-web/libs/ui/src/lib/components/dot-asset-search/components/dot-asset-card/dot-asset-card.component.scss
+++ b/core-web/libs/ui/src/lib/components/dot-asset-search/components/dot-asset-card/dot-asset-card.component.scss
@@ -47,7 +47,7 @@
             .p-card-title {
                 flex-grow: 1;
                 h2 {
-                    font-size: $dot-editor-size;
+                    font-size: $font-size-md;
                     line-height: 140%;
                     margin: 0;
                     overflow: hidden;
