--- a/core-web/libs/block-editor/src/lib/components/dot-editor-count-bar/dot-editor-count-bar.component.scss
+++ b/core-web/libs/block-editor/src/lib/components/dot-editor-count-bar/dot-editor-count-bar.component.scss
@@ -7,7 +7,7 @@
     color: $color-palette-gray-500;
     margin-top: 1rem;
     gap: 0.65rem;
-    font-size: $dot-editor-size;
+    font-size: 14px;
 
     .error-message {
         color: $error;
