chore(primeng): fix issues with tree select

--- a/core-web/libs/edit-content/src/lib/fields/dot-edit-content-host-folder-field/dot-edit-content-host-folder-field.component.html
+++ b/core-web/libs/edit-content/src/lib/fields/dot-edit-content-host-folder-field/dot-edit-content-host-folder-field.component.html
@@ -4,7 +4,7 @@
     [formControl]="pathControl"
     [filter]="true"
     [options]="store.tree()"
-    [attr.aria-labelledby]="'field-' + field.variable"
+    [attr.aria-labelledby]="'field-' + $field().variable"
     [virtualScroll]="true"
     [virtualScrollItemSize]="50"
     [scrollHeight]="'450px'"
