--- a/core-web/libs/dotcms-scss/angular/dotcms-theme/components/form/_treeselect.scss
+++ b/core-web/libs/dotcms-scss/angular/dotcms-theme/components/form/_treeselect.scss
@@ -37,6 +37,7 @@
 
     .p-treeselect-label {
         padding: $spacing-1 $spacing-2;
+        line-height: $spacing-4;
         transition:
             background-color $basic-speed,
             border-color $basic-speed,
