--- a/core-web/apps/dotcms-ui/src/app/portlets/dot-templates/dot-template-create-edit/dot-template-create-edit.component.html
+++ b/core-web/apps/dotcms-ui/src/app/portlets/dot-templates/dot-template-create-edit/dot-template-create-edit.component.html
@@ -12,16 +12,13 @@
                 <dot-api-link [href]="vm.apiLink"></dot-api-link>
             </ng-container>
         </dot-portlet-toolbar>
-        <!-- The observable returns a boolen, therefore we can not use  *ngIf="obs$ | async as obs" to subscribe to it -->
-        <ng-container *ngIf="{ value: didTemplateChanged$ | async } as didTemplateChanged">
-            <dot-template-builder
-                (updateTemplate)="updateWorkingTemplate($event)"
-                (saveAndPublish)="saveAndPublishTemplate($event)"
-                (save)="saveTemplate($event)"
-                (cancel)="cancelTemplate()"
-                (custom)="onCustomEvent($event)"
-                [didTemplateChanged]="didTemplateChanged.value"
-                [item]="vm.working"></dot-template-builder>
-        </ng-container>
+        <dot-template-builder
+            (updateTemplate)="updateWorkingTemplate($event)"
+            (saveAndPublish)="saveAndPublishTemplate($event)"
+            (save)="saveTemplate($event)"
+            (cancel)="cancelTemplate()"
+            (custom)="onCustomEvent($event)"
+            [didTemplateChanged]="vm.didTemplateChanged"
+            [item]="vm.working"></dot-template-builder>
     </dot-portlet-base>
 </ng-container>
