chore(primeng) fix typos with unit tests

--- a/core-web/apps/dotcms-ui/src/app/view/components/_common/dot-autocomplete-tags/dot-autocomplete-tags.component.html
+++ b/core-web/apps/dotcms-ui/src/app/view/components/_common/dot-autocomplete-tags/dot-autocomplete-tags.component.html
@@ -10,7 +10,7 @@
     [placeholder]="placeholder"
     [disabled]="disabled"
     #autoComplete
-    field="label"
+    optionLabel="label"
     dataKey="label"
     inputStyleClass="ui-inputtext "
     appendTo="body" />
