Removed compilerOptions and change some interfaces

--- a/examples/nextjs/src/app/globals.css
+++ b/examples/nextjs/src/app/globals.css
@@ -18,6 +18,11 @@
   }
 }
 
+/* Custom classes, example to BlockEditorRenderer */
 table, th, td {
   border: 1px solid;
+}
+
+.blocks {
+  border: 5px solid red;
 }
