chore(primeng) fix unit tests

--- a/core-web/libs/template-builder/src/lib/components/template-builder/components/add-style-classes-dialog/add-style-classes-dialog.component.html
+++ b/core-web/libs/template-builder/src/lib/components/template-builder/components/add-style-classes-dialog/add-style-classes-dialog.component.html
@@ -12,7 +12,7 @@
         dotSelectItem
         data-testId="autocomplete"
         inputId="auto-complete-input"
-        appendTo="body"></p-autoComplete>
+        appendTo="body" />
     <ng-container *ngIf="isJsonClasses$ | async; else suggestionNotes">
         <ul data-testId="list">
             <li>
