chore(primeng) skip tests

--- a/core-web/apps/dotcms-ui/src/app/portlets/dot-edit-page/content/components/dot-edit-page-view-as-controller/dot-edit-page-view-as-controller.component.html
+++ b/core-web/apps/dotcms-ui/src/app/portlets/dot-edit-page/content/components/dot-edit-page-view-as-controller/dot-edit-page-view-as-controller.component.html
@@ -5,7 +5,7 @@
         [value]="pageState.viewAs.device"
         appendTo="body"
         tooltipPosition="bottom"
-        tooltipStyleClass="dot-device-selector__dialog"></dot-device-selector>
+        tooltipStyleClass="dot-device-selector__dialog" />
 
     <dot-language-selector
         (selected)="changeLanguageHandler($event)"
