--- a/core-web/apps/dotcms-ui/src/app/portlets/dot-apps/dot-apps-configuration-detail/dot-apps-configuration-detail-form/dot-apps-configuration-detail-form.component.html
+++ b/core-web/apps/dotcms-ui/src/app/portlets/dot-apps/dot-apps-configuration-detail/dot-apps-configuration-detail-form/dot-apps-configuration-detail-form.component.html
@@ -77,7 +77,7 @@
                     [ngClass]="{
                         required: field.required
                     }"
-                    [options]="field.options"></p-dropdown>
+                    [options]="field.options" />
                 <span class="p-field-hint">
                     <markdown>{{ field.hint }}</markdown>
                 </span>
